[package]
name = "agentplug-bert"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentplug_bert"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
serde_json = "1"
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
gemm = { version = "0.17", default-features = false }
tokenizers = { version = "0.23", default-features = false, features = ["unstable_wasm"] }
getrandom = { version = "0.2", features = ["custom"] }
